--- a/src/patterns/__environment__/60-templates/tool.hbs
+++ b/src/patterns/__environment__/60-templates/tool.hbs
@@ -1,3 +1,83 @@
+{{! Reformat blocks for improved compatability. }}
+{{#each blocks}}
+
+  {{! Find invalid image paths, and remove them. }}
+  {{#if (eq image.src '/')}}
+    {{assign 'image.src' null}}
+  {{/if}}
+
+  {{! Save the updated block. }}
+  {{storagePush 'blocks' this}}
+
+{{/each}}
+
+{{! Update the blocks data. }}
+{{assign 'blocks' (storageGet 'blocks')}}
+
+{{! Make adjustments to contacts as needed if applicable. }}
+{{#if contacts}}
+
+  {{! Reformat contact cards for improved compatability. }}
+  {{#each contacts.cards}}
+
+    {{! Validate image paths. }}
+    {{#if (eq image.src '/')}}
+      {{assign 'image.src' '/placeholder/male.jpg'}}
+    {{/if}}
+
+    {{! Ignore invalid cards, and save valid ones. }}
+    {{#if (and (not (eq link.href '/')) name title)}}
+      {{storagePush 'contacts.cards' this}}
+    {{/if}}
+
+  {{/each}}
+
+  {{! Update the contact cards data. }}
+  {{assign 'contacts.cards' (storageGet 'contacts.cards')}}
+
+{{/if}}
+
+{{! Make adjustments to resources as needed if applicable. }}
+{{#if resources}}
+
+  {{! Reformat resource cards for improved compatability. }}
+  {{#each resources.cards}}
+
+    {{! Validate link paths. }}
+    {{#if (eq link-type 'Cascade Page')}}
+      {{assign 'link.href' cascade-page.path}}
+      {{assign 'title' cascade-page.title}}
+      {{#if link-customizations}}
+        {{#if (gte (indexOf link-customizations 'Label') 0)}}
+          {{assign 'title' link-label}}
+        {{/if}}
+      {{/if}}
+    {{else if (eq link-type 'Cascade File')}}
+
+    {{#if link-customizations}}
+      {{assign 'link.href' cascade-file.path}}
+      {{assign 'title' (stem cascade-file.display-name)}}
+      {{#if (gte (indexOf link-customizations 'Label') 0)}}
+        {{assign 'title' link-label}}
+      {{/if}}
+    {{/if}}
+    {{else if (eq link-type 'External URL')}}
+      {{assign 'link.href' external-url}}
+      {{assign 'title' link-label}}
+    {{/if}}
+
+    {{! Ignore invalid cards, and save valid ones. }}
+    {{#if (and (not (eq link.href '/')) title)}}
+      {{storagePush 'resources.cards' this}}
+    {{/if}}
+
+  {{/each}}
+
+  {{! Update the contact cards data. }}
+  {{assign 'resources.cards' (storageGet 'resources.cards')}}
+
+{{/if}}
+
 <div class="tool-page">
   <header class="tool-page-header"></header>
   <div class="tool-page-main">
