--- a/src/patterns/__environment__/60-templates/research-help.hbs
+++ b/src/patterns/__environment__/60-templates/research-help.hbs
@@ -22,7 +22,7 @@
 
     {{! Validate image paths. }}
     {{#if (eq image.src '/')}}
-      {{assign 'image.src' '/placeholder/male.jpg'}}
+      {{assign 'image.src' '/avatars/placeholder.male.jpg'}}
     {{/if}}
 
     {{! Ignore invalid cards, and save valid ones. }}
