Fixes hero images not showing on exhibition pages by adding additional path helpers and forcing the background image path to be absolute

--- a/src/patterns/__environment__/50-organisms/intro~hero.hbs
+++ b/src/patterns/__environment__/50-organisms/intro~hero.hbs
@@ -1,6 +1,6 @@
 {{#if background-image}}
   {{#if (and (startsWithSubstring background-image '/') (not (startsWithSubstring background-image '//')))}}
-    {{assign 'background-image' (combine (baseUrl) background-image)}}
+    {{assign 'background-image' (absolutePath background-image)}}
   {{/if}}
 {{/if}}
 
