--- a/src/patterns/__environment__/60-templates/research-help.hbs
+++ b/src/patterns/__environment__/60-templates/research-help.hbs
@@ -48,7 +48,7 @@
       {{assign 'link.href' cascade-page.path}}
       {{assign 'title' cascade-page.title}}
       {{#if link-customizations}}
-        {{#if (gte (indexOf link-customizations 'Label') 0)}}
+        {{#if (not (eq (indexOf link-customizations 'Label') false))}}
           {{assign 'title' link-label}}
         {{/if}}
       {{/if}}
@@ -57,8 +57,10 @@
     {{#if link-customizations}}
       {{assign 'link.href' cascade-file.path}}
       {{assign 'title' (stem cascade-file.display-name)}}
-      {{#if (gte (indexOf link-customizations 'Label') 0)}}
-        {{assign 'title' link-label}}
+      {{#if link-customizations}}
+        {{#if (not (eq (indexOf link-customizations 'Label') false))}}
+          {{assign 'title' link-label}}
+        {{/if}}
       {{/if}}
     {{/if}}
     {{else if (eq link-type 'External URL')}}
